--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="nothing" />
     <string name="no_connection">No Internet connection</string>
     <string name="no_connect">No Internet Connection!</string>
+    <string name="logo_string">Company Logo</string>
 </resources>
